# tamil-yaappu-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFERENCE.md  build.rs  proposal.md
.github/workflows/: deploy-pages.yml
examples/: analyze_kural.rs  trace_832.rs  trace_compound.rs
src/: lib.rs  main.rs  preprocessor.rs  types.rs
src/tamil/: compound.rs  grapheme.rs  mod.rs  prosody.rs  sandhi.rs  syllable.rs  unicode.rs
tests/: classify_all_kurals.rs  classify_all_verses.rs  integration_tests.rs
tests/data/: innisai_venba.json  kalippa.json  kural.json  nerisai_asiriyappa.json  nerisai_venba.json  nilaimandila_asiriyappa.json  sindhiyal_venba.json  vanjippa.json
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html
web/css/: colors.css  main.css
web/js/: app.js  data-mapper.js  evidence.js  tamil-terms.js
web/js/components/: analysis-panel.js  junction-view.js  line-row.js  poem-header.js  validation-panel.js  verse-display.js  word-box.js  word-card.js
workflows/: preprocessor.json
workflows/analysis/: a1_counts.json  a1_seer.json  a2_structural.json  a2_thalai.json  a3_adi.json  a3_seer.json  a4_thalai.json  a4_thodai.json  a5_classify.json  a5_ornamentation.json  a6_classify.json
workflows/venba/: l2_seer.json  l3_vendalai.json  l4_ornamentation.json
workflows/venba/kural/: l1_structural.json
