[package]
name = "tamil-prosody-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
dataflow-rs = { path = "../Plasmatic/dataflow-rs" }
datalogic-rs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
unicode-normalization = "0.1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
