[package]
name = "tamil-yaappu-analyzer"
version = "0.1.0"
edition = "2024"
description = "Tamil prosody analyzer and classifier for verse compositions"
license = "Apache-2.0"
repository = "https://github.com/codetiger/tamil-yaappu-analyzer"
keywords = ["tamil", "prosody", "poetry", "linguistics", "analysis"]
categories = ["text-processing"]

[dependencies]
dataflow-rs = "2.1"
datalogic-rs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
unicode-normalization = "0.1"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
