[package]
name = "tamil-prosody-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tamil-prosody-validator = { path = ".." }
dataflow-rs = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
